Fix menu overflow

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -113,20 +113,12 @@ a.btn-default {
   color: $text-black;
 }
 
-.dropdown-menu {
-  max-height: 350px;
-  overflow-y: auto;
-}
-.navbar .dropdown-menu {
-  max-height: 400px;
-}
-.navbar .dropdown-toggle span.menu_label {
-  max-width: 15em;
+.menu-left .dropdown .menu_label {
+  max-width: 180px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   display: inline-block;
-  vertical-align: bottom;
 }
 
 .leaflet-top, .leaflet-bottom {
